2008-02-08  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>

	* twittering-mode.el : 全体的に整形、Proxy、Safe Password、
	User-Agent、Major mode stringを対応。Version 0.3
	(twittering-mode-version): 暫定のバージョン定数を定義
	(twittering-proxy-use): プロキシ関係設定を導入 from <http://d.hatena.ne.jp/lurdan/20080108/1199775387>
	(twittering-proxy-server): 同上
	(twittering-proxy-port, twittering-proxy-user): 同上
	(twittering-proxy-password): 同上
	(twittering-toggle-proxy): 同上
	(twittering-user-agent-default-function): 同上
	(twittering-user-agent-default-function): デフォルトUser-Agent生成関数
	(twittering-user-agent-function): User-Agent生成関数指定変数を導入
	(twittering-user-agent): 内部でのUser-Agent生成関数
	(twittering-tmp-dir): ユーザー固有のImageTmpDirを生成 from <http://d.hatena.ne.jp/odz/20071021/1192957783>
	(twittering-mode-map): プロキシの有効無効のキーバインド定義
	(twittering-mode-string): メジャーモード文字列を変数定義
	(twittering-mode): メジャーモード開始時に文字列を設定
	(twittering-http-get): プロキシ、User-Agentによる処理を追加
	(twittering-http-post): 同上
	(twittering-get-password): パスワードを動的に確認する関数を定義

2007-10-14  Y. Hayamizu  <haya@haya-laptop-ubuntu>

	* twittering-mode.el : Naoya T. <naoya.t@aqua.plala.or.jp>, masa_edw のパッチをとりこむ
	(twittering-url-encode): 使わないので削除
	(twittering-decode-html-entities): patched: 数値エンティティだけでなく,asciiエンティティにも対応.
	(twittering-font-lock-keywords): font-lock-keywordsを削除.text propertyによって設定する.
	(twittering-format-status): patched: statusとformat-strからstatusの表示用文字列を生成.
	(twittering-scroll-mode): patched: 新しいtwitがあったときに,カーソルもスクロールするか固定するかを設定するマイナモード, masa_edwのパッチ
	(twittering-status-format): twitの表示方法をきめるテンプレート文字列
	(twittering-icon-mode): patched: ifをwhenにおかえた.nilを渡されたときはマイナモードのスイッチに振舞を変更
	(twittering-local-strftime): patched: 時間をフォーマット文字列に従い文字列化
	(twittering-mode-init-variables): font-lock-modeは,Emacs21系ではautoloadするために一度呼ぶ必要がある. icon-mode, scroll-modeをマイナモードに登録.
	(twittering-inspect-object): 使わないので削除
	(twittering-http-get-default-sentinel): エラーを追いやすくするため,condition-caseを廃止
	(twittering-status-to-status-datum): 全てのデータを抽出するようコード追加.ユーザ名,URIリンク表示などの処理もここで.
