@@ -1,3 +1,8 @@
+2008-03-15  Y. Hayamizu  <haya@haya-laptop-ubuntu>
+
+	* twittering-mode.el : pushをfree variableと誤認識されるバグ(再現できていない)のため,clのpushをlist-pushで置きかえ.
+	(list-push): clのpushの代替として定義.
+
 2008-02-08  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>
 
 	* twittering-mode.el : 全体的に整形、Proxy、Safe Password、
